jenkins met extra supervisor

--- a/projects/services/jenkins/conf/supervisor/supervisord.conf
+++ b/projects/services/jenkins/conf/supervisor/supervisord.conf
@@ -21,5 +21,10 @@ nodaemon=true
 environment = JENKINS_HOME="/var/jenkins_home", JENKINS_PREFIX="/"
 command = /usr/local/bin/jenkins.sh
 
+[program:docker]
+command = /etc/init.d/docker.io start
+autostart = true
+autorestart = false
+
 [include]
 files = /etc/supervisor/conf.d/*.conf
