--- a/projects/services/jenkins/conf/supervisor/supervisord.conf
+++ b/projects/services/jenkins/conf/supervisor/supervisord.conf
@@ -18,11 +18,11 @@ loglevel=debug
 nodaemon=true
 
 [program:jenkins]
-environment = JENKINS_HOME="/var/jenkins_home", JENKINS_PREFIX="/"
+environment = JENKINS_HOME="/var/jenkins_home", JENKINS_PREFIX="/", DOCKER_HOST="tcp://127.0.0.1:2375"
 command = /usr/local/bin/jenkins.sh
 
 [program:docker]
-command = /etc/init.d/docker.io start
+command = docker -d
 autostart = true
 autorestart = false
 
