--- a/projects/services/jenkins/conf/supervisor/supervisord.conf
+++ b/projects/services/jenkins/conf/supervisor/supervisord.conf
@@ -18,7 +18,7 @@ loglevel=debug
 nodaemon=true
 
 [program:jenkins]
-environment = JENKINS_HOME="/var/jenkins_home", JENKINS_PREFIX="/", DOCKER_HOST="tcp://127.0.0.1:2375"
+environment = JENKINS_HOME="/var/jenkins_home", JENKINS_PREFIX="/"
 command = /usr/local/bin/jenkins.sh
 
 [program:docker]
